<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/langTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/select_lang"
            android:textSize="18dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <Button
            android:id="@+id/huButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hu"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/langTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/enButton"
            android:layout_margin="12dp" />

    <Button
            android:id="@+id/enButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/en"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/langTextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/huButton"
            android:layout_margin="12dp" />

</android.support.constraint.ConstraintLayout>