<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/typeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Tag hozzáadása" />

    <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/typeTextView"
            tools:text="2019.05.22" />

    <TextView
            android:id="@+id/spendingNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/typeTextView"
            app:layout_constraintTop_toBottomOf="@+id/typeTextView"
            android:text="@string/history_spending_name_modify" />

    <TextView
            android:id="@+id/spendingValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/typeTextView"
            app:layout_constraintTop_toBottomOf="@+id/spendingNameTextView"
            android:text="@string/history_spending_money_modify" />

    <TextView
            android:id="@+id/spendingDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/typeTextView"
            app:layout_constraintTop_toBottomOf="@+id/spendingValueTextView"
            android:text="@string/history_spending_date_modify" />

    <TextView
            android:id="@+id/creatorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/creator"
            app:layout_constraintStart_toStartOf="@+id/typeTextView"
            app:layout_constraintTop_toBottomOf="@+id/spendingDateTextView" />

    <TextView
            android:id="@+id/creatorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintStart_toEndOf="@+id/creatorLabel"
            app:layout_constraintTop_toTopOf="@+id/creatorLabel"
            tools:text="Mr Test 1" />

    <include layout="@layout/inc_divider" />

</android.support.constraint.ConstraintLayout>